--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=b, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./src/js/libCapas2223.js"></script>
+    <title>FitVibes: Música, Nutrición y Desafíos</title>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,133 +18,27 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
+  
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" id="FitVibes" href="#">FitVibes</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" id="home-link" href="#">Música</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="features-link" href="#">Alimentación</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="pricing-link" href="#">Pricing</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div id="cuerpo" class="container"></div>
-    <footer></footer>
-  </body>
+    <div id="navbar"></div>
+  </body>  
 </html>
 
-<script>
-  document.querySelectorAll(".nav-link").forEach((link) => {
-    link.addEventListener("click", (e) => {
-      e.preventDefault();
-      document.querySelector(".nav-link.active").classList.remove("active");
-      link.classList.add("active");
-    });
-  });
-</script>
-
 <style>
-  @font-face {
-    font-family: "Silk Flower";
-    src: url("./src/fonts/Silk\ Flower.otf") format("woff2"); /* Formato WOFF2 */
-  }
-  @font-face {
-    font-family: "Alegreya";
-    src: url("./src/fonts/Alegreya-VariableFont_wght.ttf");
-  }
-  html {
-    background-color: #c7f9cc;
-  }
-  /* global.css */
-  nav {
-    background-color: #38a3a5 !important;
-
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 5em; /* Ajusta la altura de la barra */
-    display: flex;
-    justify-content: center; /* Centrar horizontalmente */
-    align-items: center; /* Centrar verticalmente */
-    z-index: 1; /* Asegura que el navbar esté por encima de otros elementos */
-    transition: background-color 0.5s ease; /* Transición suave para el cambio de color de fondo */
-  }
-
-  nav div {
-    display: flex;
-    flex-wrap: wrap; /* Permite que los elementos se ajusten en múltiples líneas */
-    justify-content: center; /* Centra los elementos horizontalmente */
-  }
-
-  nav div a {
-    margin: 0 1em; /* Espacio entre los enlaces */
-    text-decoration: none;
-    color: white;
-    font-size: x-large; /* Tamaño de letra más grande */
-    transition: color 0.5s ease; /* Transición suave para el cambio de color de texto */
-    position: relative; /* Establece una posición relativa para el enlace */
-    font-family: "Alegreya";
-    letter-spacing: 0.1em;
-  }
-
-  /* Media query para pantallas pequeñas */
-  @media screen and (max-width: 600px) {
-    nav {
-      padding-top: 1.5em;
-      padding-bottom: 1em;
-      height: auto; /* Altura automática para adaptarse al contenido */
-    }
-    nav div a {
-      font-size: xx-large; /* Reducción del tamaño de la fuente para pantallas pequeñas */
-    }
-  }
-  nav div a:active {
-    color: black;
-  }
-  .nav-link {
-    color: lightgray;
-    font-weight: 600;
-  }
-#FitVibes{
-  font-family: "Silk Flower", Cambria, Cochin, Georgia, Times, serif;
-
-}
-#FitVibes:hover::before{
-  width: 0%;
-
-}
-  nav div a::before {
-    content: ""; /* Agrega contenido al pseudo-elemento */
-    position: absolute; /* Establece una posición absoluta */
-    bottom: 5px; /* Ubica el pseudo-elemento en la parte inferior del enlace */
-    left: 0; /* Inicia el pseudo-elemento desde el lado izquierdo del enlace */
-    width: 0; /* Inicialmente establece el ancho en 0 */
-    height: 2px; /* Establece la altura del underline */
-    background-color: black; /* Color del underline */
-    transition: width 0.3s ease; /* Transición suave para el ancho del underline */
-  }
-
-  nav div a:hover::before {
-    width: 100%; /* Al hacer hover, expande el underline al 100% del ancho del enlace */
+  body{
+    background-color: aquamarine;
   }
 </style>
+
+
+
+<script>
+  var urls = [
+  { url: './src/html/navbar.html', capa: 'navbar' },
+  //{ url: 'https://api.example.com/data2', capa: 'capa2' },
+];
+
+cargarUrls(urls);
+
+</script>
