--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./src/js/libCapas2223.js"></script>
     <title>FitVibes: Música, Nutrición y Desafíos</title>
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,26 +19,23 @@
     ></script>
   </head>
 
-  
   <body>
     <div id="navbar"></div>
-  </body>  
+    <div id="cuerpo" class="container mx-auto mt-5 pt-5"></div>
+  </body>
 </html>
 
 <style>
-  body{
-    background-color: aquamarine;
+  body {
+    background-color: #ee964b;
   }
 </style>
 
-
-
 <script>
   var urls = [
-  { url: './src/html/navbar.html', capa: 'navbar' },
-  //{ url: 'https://api.example.com/data2', capa: 'capa2' },
-];
+    { url: "./src/html/navbar.html", capa: "navbar" },
+    { url: "./src/html/inicio.html", capa: "cuerpo" },
+  ];
 
-cargarUrls(urls);
-
+  cargarUrls(urls);
 </script>
