--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./src/js/libCapas2223.js"></script>
     <title>FitVibes: Música, Nutrición y Desafíos</title>
 
+    <link href="./src/css/global.css" rel="stylesheet"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,24 +18,23 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+    src="./src/js/global.js"></script>
   </head>
 
   <body>
     <div id="navbar"></div>
     <div id="cuerpo" class="container mx-auto mt-5 pt-5"></div>
+    <div id="footer"></div>
   </body>
 </html>
 
-<style>
-  body {
-    background-color: #ee964b;
-  }
-</style>
 
 <script>
   var urls = [
     { url: "./src/html/navbar.html", capa: "navbar" },
     { url: "./src/html/inicio.html", capa: "cuerpo" },
+    { url: "./src/html/footer.html", capa: "footer" }
   ];
 
   cargarUrls(urls);
