--- a/src/html/alimentacion.html
+++ b/src/html/alimentacion.html
@@ -6,6 +6,12 @@
     <title>Alimentación</title>
 </head>
 <body>
-    
+    <script>
+        var carta = [
+        {image:'../src/images/inicio-1.webp', title:'Cokies',text:'Cookies proteicas de platano y crema de cacahuete.'}
+        ]
+        CrearCards('alimentacion',carta)
+    </script>
+    <div id="alimentacion"></div>
 </body>
 </html>
