--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <div class="card mb-3 carta">
+      <div class="card-body">
+        <h2 class="card-title text-center mb-4">¿Quieres Ponerte en Forma? </h2>
+        <p class="card-text">
+          En esta página encontraras muchos consejos de alimentación, asi como una gran variedad de recetas que te ayudaran a conseguir tus objetivos. 
+          Tambien puedes buscar inspiración para el gimnasio en nuestra zona de ejercicios y motivarte intentando cumplir los retos. 
+          <br> No esperemas y apuntante a una vida saludable con nosotros. 
+        </p>
+      </div>
+    </div>
+    <img src="../src/images/inicio-1.webp" class="img-fluid image" >
+    <img src="../src/images/inicio-2.webp" class="img-fluid image"/>
+  </body>
 </html>
