--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -10,7 +10,9 @@
     </style>
 </head>
 <body>
+    
     <nav class="navbar navbar-expand-lg fixed-top">
+    <img src="../src/images/Logo.svg" class="logo"/>
       <div class="container-fluid">
           <button
               class="navbar-toggler"
