añadiendo dos chorradas

--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -8,15 +8,18 @@
   <body>
     <div class="card mb-3 carta">
       <div class="card-body">
-        <h2 class="card-title text-center mb-4">¿Quieres Ponerte en Forma? </h2>
+        <h2 class="card-title text-center mb-4">¿Quieres Ponerte en Forma?</h2>
         <p class="card-text">
-          En esta página encontraras muchos consejos de alimentación, asi como una gran variedad de recetas que te ayudaran a conseguir tus objetivos. 
-          Tambien puedes buscar inspiración para el gimnasio en nuestra zona de ejercicios y motivarte intentando cumplir los retos. 
-          <br> No esperemas y apuntante a una vida saludable con nosotros. 
+          En FitVibes encontrarás consejos sobre alimentación
+          y una variedad de recetas diseñadas para ayudarte a alcanzar
+          tus objetivos saludables. Además,
+          podrás descubrir inspiración para tus rutinas en el gimnasio y
+          motivarte con emocionantes desafíos. ¡No esperes más y únete a
+          nosotros en el camino hacia una vida más saludable!
         </p>
       </div>
     </div>
-    <img src="../src/images/inicio-1.webp" class="img-fluid image" >
-    <img src="../src/images/inicio-2.webp" class="img-fluid image"/>
+    <img src="../src/images/inicio-1.webp" class="img-fluid image" />
+    <img src="../src/images/inicio-2.webp" class="img-fluid image" />
   </body>
 </html>
