--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./src/images/favicon.ico" type="image/x-icon">
     <script src="./src/js/libCapas2223.js"></script>
     <title>FitVibes: Música, Nutrición y Desafíos</title>
 
