--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -21,5 +21,29 @@
     </div>
     <img src="../src/images/inicio-1.webp" class="img-fluid image" />
     <img src="../src/images/inicio-2.webp" class="img-fluid image" />
+    <h2 class="card-title text-center mb-4 text-white">¿Tienes alguna duda? Contacta con nosotros</h2>
+    <!-- Aquí es donde comienza el formulario -->
+    <form class="text-white">
+      <div class="row justify-content-center">
+      <div class="form-group col-6 col-lg-4">
+        <label for="name" class="my-2">Nombre</label>
+        <input type="text" class="form-control" id="name" placeholder="Ponga su nombre">
+      </div>
+      <div class="form-group col-6 col-lg-4">
+        <label for="email" class="my-2">Correo electrónico</label>
+        <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com">
+      </div>
+    </div>
+    <div class=" row justify-content-center">
+      <div class="form-group col-lg-8">
+        <label for="message" class="my-2">Mensaje</label>
+        <textarea class="form-control" id="message" rows="3" placeholder="Escriba su duda"></textarea>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+      <button type="submit" class="btn btnfos-2">Enviar</button>
+    </div>
+    </form>
+    <!-- Aquí es donde termina el formulario -->
   </body>
 </html>
