--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -12,7 +12,7 @@
           class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 "
         >
           <div class="col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-black"
+            <span class="mb-3 mb-md-0 text-black fitvibes-footer"
               >&copy; <span id="year"></span> FitVibes</span
             >
           </div>
