Implementado el audio y video.

--- a/src/html/alimentacion.html
+++ b/src/html/alimentacion.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alimentación</title>
 </head>
+
+
 <body>
     <script>
         var carta = [
-        {image:'../src/images/inicio-1.webp', title:'Cokies',text:'Cookies proteicas de platano y crema de cacahuete.'}
+        {image:'https://cdn.pixabay.com/photo/2014/11/05/15/57/salmon-518032_1280.jpg', title:'Salmon al limon',text:'Salmon a la plancha al limon y un ligero toque de pimienta, que le da un sabor unico y delicioso'},
+        {image:'https://cdn.pixabay.com/photo/2016/05/26/18/18/cereals-1417868_1280.jpg', title:'Pan de avena',text:'Pan de avena con semillas de chia, ideal para el desayuno o la merienda, es muy nutritivo y delicioso'},
         ]
-        CrearCards('alimentacion',carta)
+        
+        CrearCardsAlimentacion('alimentacion',carta)
     </script>
     <div id="alimentacion"></div>
 </body>
