--- a/src/html/musica.html
+++ b/src/html/musica.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Música</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Música</title>
 </head>
 <body>
-    <div class="card mb-3 carta"  >
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+   <script>
+    var carta = [
+    {image:'https://cdn.pixabay.com/audio/2023/07/15/09-52-42-921_200x200.jpg', title:'dark-trap-groove',audio:'../src/musica/dark-trap-groove.mp3'},
+    {image:'https://cdn.pixabay.com/audio/2023/08/15/17-10-52-161_200x200.jpeg', title:'energetic-rock-trailer',audio:'../src/musica/energetic-rock-trailer.mp3'},
+    {image:'https://cdn.pixabay.com/audio/2023/03/22/19-44-41-172_200x200.jpg', title:'escape',audio:'../src/musica/escape.mp3'},
+    {image:'https://cdn.pixabay.com/audio/2023/11/04/08-55-43-799_200x200.png', title:'happiness',audio:'../src/musica/happiness.mp3'},
+    {image:'https://cdn.pixabay.com/audio/2023/03/18/23-08-01-409_200x200.jpg', title:'unlimited-motivation-background-vlog-music',audio:'../src/musica/unlimited-motivation-background-vlog-music.mp3'},
+    ]
+    CrearCardsmusica('musica',carta)
+  </script>
+  <div id="musica"></div>
 </body>
 </html>
