--- a/src/html/ejercicios.html
+++ b/src/html/ejercicios.html
@@ -8,8 +8,12 @@
 <body>
   <script>
     var carta = [
-    {video:'../src/video/kettlebell.mp4', title:'Ejercicio Kettlebell',text:'Ejercicio para fortalecer la parte superiror del tronco con una Ketelebell, adaptarlo a tu peso.'},
-    {video:'https://cdn.pixabay.com/vimeo/761273567/gimnasio-135162.mp4?width=1280&hash=1148ff72904731ddba261b44676d008ad30b3231', title:'Jalon al Pecho',text:'Ejercicio para fortalecer la parte superiror de la espalda. es muy bueno para el dorsal y el trapecio superior.'},
+    {video:'https://cdn.pixabay.com/vimeo/241674141/entrenamiento-kettlebell-12697.mp4?width=640&hash=76576b17d707e7304c9bf5818dcb9946e1e95ebc', title:'Ejercicio Kettlebell',text:'Ejercicio para fortalecer la parte superiror del tronco con una Ketelebell, adaptarlo a tu peso.'},
+    {video:'https://cdn.pixabay.com/vimeo/761273567/gimnasio-135162.mp4?width=1280&hash=1148ff72904731ddba261b44676d008ad30b3231', title:'Jalón al Pecho',text:'Ejercicio para fortalecer la parte superiror de la espalda. es muy bueno para el dorsal y el trapecio superior.'},
+    {video:'https://cdn.pixabay.com/vimeo/793717957/aptitud-fisica-148212.mp4?width=1280&hash=b1e5cb642d2aacfdfa798dfeba185a36df0b890a', title:'Peso muerto rumano', text:'Ejercicio para fortalecer la parte inferior de la espalda y los glúteos. Es muy bueno para la parte posterior de las piernas.'},
+    {video:'https://cdn.pixabay.com/vimeo/761273555/gimnasio-135159.mp4?width=1280&hash=e726218997e08ef93623b86f4e6d772543e6cf1a', title:'Sentadilla búlgara',text:' Ejercicio para fortalecer la parte inferior de la espalda y los glúteos. Es muy bueno para la parte posterior de las piernas.'},
+    {video:'https://cdn.pixabay.com/vimeo/793717950/aptitud-fisica-148209.mp4?width=1280&hash=a5183b05f96ccb0f1a21d51b437518167664b129', title:'Pájaro en máquina',text:'Ejercicio para fortalecer la parte superiror de la espalda. es muy bueno para el dorsal y el trapecio superior.'},
+
     ]
     CrearCardsvideo('ejercicios',carta)
   </script>
