--- a/src/html/musica.html
+++ b/src/html/musica.html
@@ -13,6 +13,7 @@
     {image:'https://cdn.pixabay.com/audio/2023/03/22/19-44-41-172_200x200.jpg', title:'escape',audio:'../src/musica/escape.mp3'},
     {image:'https://cdn.pixabay.com/audio/2023/11/04/08-55-43-799_200x200.png', title:'happiness',audio:'../src/musica/happiness.mp3'},
     {image:'https://cdn.pixabay.com/audio/2023/03/18/23-08-01-409_200x200.jpg', title:'unlimited-motivation-background-vlog-music',audio:'../src/musica/unlimited-motivation-background-vlog-music.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/hardstyle.jpg', title:'Hardstyle',audio:'https://stream.technolovers.fm/hardstyle'},
     ]
     CrearCardsmusica('musica',carta)
   </script>
