--- a/src/html/alimentacion.html
+++ b/src/html/alimentacion.html
@@ -10,12 +10,19 @@
 <body>
     <script>
         var carta = [
-        {image:'https://cdn.pixabay.com/photo/2014/11/05/15/57/salmon-518032_1280.jpg', title:'Salmon al limon',text:'Salmon a la plancha al limon y un ligero toque de pimienta, que le da un sabor unico y delicioso'},
+        {image:'https://cdn.pixabay.com/photo/2014/11/05/15/57/salmon-518032_1280.jpg', title:'Salmón al limon',text:'Salmón a la plancha al limon y un ligero toque de pimienta, que le da un sabor unico y delicioso'},
         {image:'https://cdn.pixabay.com/photo/2016/05/26/18/18/cereals-1417868_1280.jpg', title:'Pan de avena',text:'Pan de avena con semillas de chia, ideal para el desayuno o la merienda, es muy nutritivo y delicioso'},
+        {image:'https://cdn.pixabay.com/photo/2016/09/15/19/24/salad-1672505_640.jpg',title:'Ensalada de higos',text:'Ensalada de higos con queso de cabra, nueces y un toque de miel, una combinacion de sabores unica y deliciosa'},
+        {image:'https://cdn.pixabay.com/photo/2015/01/30/10/35/glass-jar-617387_1280.jpg', title:'Yogurt de manzana con frutos secos', text:'Yogurt de manzana con frutos secos, una combinacion de sabores unica y deliciosa'},
+        {image:'https://cdn.pixabay.com/photo/2017/09/19/08/52/pancake-2764589_1280.jpg',title:'Pancakes de avena',text:'Pancakes de avena con plátano y proteina de chocolate salado, una combinacion de sabores unica y deliciosa'}
         ]
         
         CrearCardsAlimentacion('alimentacion',carta)
     </script>
     <div id="alimentacion"></div>
+    <style>
+
+    </style>
+    
 </body>
 </html>
