cambiadas las canciones

--- a/src/html/musica.html
+++ b/src/html/musica.html
@@ -8,11 +8,11 @@
 <body>
    <script>
     var carta = [
-    {image:'https://cdn.pixabay.com/audio/2023/07/15/09-52-42-921_200x200.jpg', title:'dark-trap-groove',audio:'../src/musica/dark-trap-groove.mp3'},
-    {image:'https://cdn.pixabay.com/audio/2023/08/15/17-10-52-161_200x200.jpeg', title:'energetic-rock-trailer',audio:'../src/musica/energetic-rock-trailer.mp3'},
-    {image:'https://cdn.pixabay.com/audio/2023/03/22/19-44-41-172_200x200.jpg', title:'escape',audio:'../src/musica/escape.mp3'},
-    {image:'https://cdn.pixabay.com/audio/2023/11/04/08-55-43-799_200x200.png', title:'happiness',audio:'../src/musica/happiness.mp3'},
-    {image:'https://cdn.pixabay.com/audio/2023/03/18/23-08-01-409_200x200.jpg', title:'unlimited-motivation-background-vlog-music',audio:'../src/musica/unlimited-motivation-background-vlog-music.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/electro.jpg', title:'Electro',audio:'https://stream.technolovers.fm/electro'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/edm.jpg', title:'EDM',audio:'https://stream.technolovers.fm/edm'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/hardcore.jpg', title:'Hardcore',audio:'https://stream.technolovers.fm/hardcore'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/trance.jpg', title:'Trance',audio:'https://stream.technolovers.fm/trance'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/latinhouse.jpg', title:'Latin House',audio:'https://stream.technolovers.fm/latinhouse'},
     {image:'https://technolovers.fm/assets/img/streamlogos/hardstyle.jpg', title:'Hardstyle',audio:'https://stream.technolovers.fm/hardstyle'},
     ]
     CrearCardsmusica('musica',carta)
@@ -20,3 +20,5 @@
   <div id="musica"></div>
 </body>
 </html>
+
+<!-- <iframe src="https://tunein.com/embed/player/s296367/" style="width:100%; height:100px;" scrolling="no" frameborder="no"></iframe> -->
