--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -10,10 +10,9 @@
       <div class="card-body">
         <h2 class="card-title text-center mb-4">¿Quieres Ponerte en Forma?</h2>
         <p class="card-text">
-          En FitVibes encontrarás consejos sobre alimentación
-          y una variedad de recetas diseñadas para ayudarte a alcanzar
-          tus objetivos saludables. Además,
-          podrás descubrir inspiración para tus rutinas en el gimnasio y
+          En FitVibes encontrarás consejos sobre alimentación y una variedad de
+          recetas diseñadas para ayudarte a alcanzar tus objetivos saludables.
+          Además, podrás descubrir inspiración para tus rutinas en el gimnasio y
           motivarte con emocionantes desafíos. ¡No esperes más y únete a
           nosotros en el camino hacia una vida más saludable!
         </p>
@@ -21,29 +20,65 @@
     </div>
     <img src="../src/images/inicio-1.webp" class="img-fluid image" />
     <img src="../src/images/inicio-2.webp" class="img-fluid image" />
-    <h2 class="card-title text-center mb-4 text-white">¿Tienes alguna duda? Contacta con nosotros</h2>
+    <h2 class="card-title text-center mb-4 text-white">
+      ¿Tienes alguna duda? Contacta con nosotros
+    </h2>
     <!-- Aquí es donde comienza el formulario -->
     <form class="text-white">
       <div class="row justify-content-center">
-      <div class="form-group col-6 col-lg-4">
-        <label for="name" class="my-2">Nombre</label>
-        <input type="text" class="form-control" id="name" placeholder="Ponga su nombre">
+        <div class="form-group col-6 col-lg-4">
+          <label for="name" class="my-2">Nombre</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Ponga su nombre"
+          />
+        </div>
+        <div class="form-group col-6 col-lg-4">
+          <label for="email" class="my-2">Correo electrónico</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="correo@ejemplo.com"
+          />
+        </div>
       </div>
-      <div class="form-group col-6 col-lg-4">
-        <label for="email" class="my-2">Correo electrónico</label>
-        <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com">
+      <div class="row justify-content-center">
+        <div class="form-group col-lg-8">
+          <label for="message" class="my-2">Mensaje</label>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="3"
+            placeholder="Escriba su duda"
+          ></textarea>
+        </div>
       </div>
-    </div>
-    <div class=" row justify-content-center">
-      <div class="form-group col-lg-8">
-        <label for="message" class="my-2">Mensaje</label>
-        <textarea class="form-control" id="message" rows="3" placeholder="Escriba su duda"></textarea>
+      <div class="row justify-content-center mt-4">
+        <button type="submit" class="btn btnfos-2">Enviar</button>
       </div>
-    </div>
-    <div class="row justify-content-center mt-3">
-      <button type="submit" class="btn btnfos-2">Enviar</button>
-    </div>
     </form>
     <!-- Aquí es donde termina el formulario -->
+    <h2 class="card-title text-center mt-3 text-white">
+      Nos encontrarás en estos lugares
+    </h2>
+    <div id="map" class="mt-3"></div>
+
+    <script>
+      var map = L.map("map").setView([39.51024371876458, -0.4205672748791118], 12);
+      L.marker([39.51024371876458, -0.4205672748791118]).addTo(map).bindPopup("Campus de Burjasot - Paterna (Universidad de Valencia), 46100 Burjassot, Valencia");
+      L.marker([39.506648274639204, -0.4555919772532346]).addTo(map).bindPopup("C. Joaquín Marín, 27");
+      L.marker([39.51570609993461, -0.3863913587728467]).addTo(map).bindPopup("Camí de Montcada (parell) - Matador");
+      L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+        maxZoom: 19,
+        attribution:
+          '&copy; <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+      }).addTo(map);
+    </script>
+    <style>
+
+    </style>
   </body>
 </html>
