--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -64,7 +64,7 @@
     <h2 class="card-title text-center mt-3 text-white">
       Nos encontrarás en estos lugares
     </h2>
-    <div id="map" class="mt-3"></div>
+    <div id="map" class="mt-3 rounded-4"></div>
 
     <script>
       var map = L.map("map").setView([39.51024371876458, -0.4205672748791118], 12);
@@ -77,8 +77,5 @@
           '&copy; <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
       }).addTo(map);
     </script>
-    <style>
-
-    </style>
   </body>
 </html>
