falta arreglar el audio

--- a/src/html/musica.html
+++ b/src/html/musica.html
@@ -8,7 +8,7 @@
 <body>
    <script>
     var carta = [
-    {image:'https://technolovers.fm/assets/img/streamlogos/electro.jpg', title:'Electro',audio:'https://stream.technolovers.fm/electro'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/electro.jpg', title:'Electro',audio:'https://pixabay.com/music/trap-baby-mandala-169039/'},
     {image:'https://technolovers.fm/assets/img/streamlogos/edm.jpg', title:'EDM',audio:'https://stream.technolovers.fm/edm'},
     {image:'https://technolovers.fm/assets/img/streamlogos/hardcore.jpg', title:'Hardcore',audio:'https://stream.technolovers.fm/hardcore'},
     {image:'https://technolovers.fm/assets/img/streamlogos/trance.jpg', title:'Trance',audio:'https://stream.technolovers.fm/trance'},
