Cambios en la ventana musica

--- a/src/html/musica.html
+++ b/src/html/musica.html
@@ -8,12 +8,12 @@
 <body>
    <script>
     var carta = [
-    {image:'https://technolovers.fm/assets/img/streamlogos/electro.jpg', title:'Electro',audio:'https://pixabay.com/music/trap-baby-mandala-169039/'},
-    {image:'https://technolovers.fm/assets/img/streamlogos/edm.jpg', title:'EDM',audio:'https://stream.technolovers.fm/edm'},
-    {image:'https://technolovers.fm/assets/img/streamlogos/hardcore.jpg', title:'Hardcore',audio:'https://stream.technolovers.fm/hardcore'},
-    {image:'https://technolovers.fm/assets/img/streamlogos/trance.jpg', title:'Trance',audio:'https://stream.technolovers.fm/trance'},
-    {image:'https://technolovers.fm/assets/img/streamlogos/latinhouse.jpg', title:'Latin House',audio:'https://stream.technolovers.fm/latinhouse'},
-    {image:'https://technolovers.fm/assets/img/streamlogos/hardstyle.jpg', title:'Hardstyle',audio:'https://stream.technolovers.fm/hardstyle'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/electro.jpg', title:'Electro',audio:'../src/musica/dark-trap-groove.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/edm.jpg', title:'EDM',audio:'../src/musica/energetic-rock-trailer.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/hardcore.jpg', title:'Hardcore',audio:'../src/musica/escape.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/trance.jpg', title:'Trance',audio:'../src/musica/happiness.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/latinhouse.jpg', title:'Latin House',audio:'../src/musica/powerful-gym-rock.mp3'},
+    {image:'https://technolovers.fm/assets/img/streamlogos/hardstyle.jpg', title:'Hardstyle',audio:'../src/musica/unlimited-motivation-background-vlog-music.mp3'},
     ]
     CrearCardsmusica('musica',carta)
   </script>
@@ -21,4 +21,3 @@
 </body>
 </html>
 
-<!-- <iframe src="https://tunein.com/embed/player/s296367/" style="width:100%; height:100px;" scrolling="no" frameborder="no"></iframe> -->
