parte 1 del juego

--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -20,6 +20,11 @@
     </div>
     <img src="../src/images/inicio-1.webp" class="img-fluid image" />
     <img src="../src/images/inicio-2.webp" class="img-fluid image" />
+    <div class="container">
+      <script src="./src/js/juego.js"></script>
+      <canvas id="juego"></canvas>
+      <button class="btn" id="Jugar" onclick="juego.requestFullscreen()">Juega en Pantalla Completa</button>
+    </div>
     <h2 class="card-title text-center mb-4 text-white">
       ¿Tienes alguna duda? Contacta con nosotros
     </h2>
