añadido svgs al juego, niveles y dificultad

--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -24,6 +24,8 @@
       <script src="./src/js/juego.js"></script>
       <canvas id="juego"></canvas>
       <button class="btn" id="Jugar" onclick="juego.requestFullscreen()">Juega en Pantalla Completa</button>
+      <img hidden id="dumbbell" src="src/images/dumbbell.svg" alt="Pesas para el juego" />
+      <img hidden id="gymnast" src="src/images/gymnast.svg" alt="Personaje para el juego" />
     </div>
     <h2 class="card-title text-center mb-4 text-white">
       ¿Tienes alguna duda? Contacta con nosotros
