añadiendo modelo threejs

--- a/src/html/alimentacion.html
+++ b/src/html/alimentacion.html
@@ -20,9 +20,14 @@
         CrearCardsAlimentacion('alimentacion',carta)
     </script>
     <div id="alimentacion"></div>
+    <div id="animacion" class="mb-5"></div>
     <style>
-
+        #animacion > canvas{
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+            border-radius: 10px;
+        }
     </style>
-    
 </body>
 </html>
