--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
   <body>
     <div id="navbar"></div>
     <div id="cuerpo" class="container mx-auto mt-5 pt-5"></div>
+    <div class="text-center m-4 p-2">
+    <a href="./src/html/graficoD3.html" class="card-title grafico text-white">Grafico 3D</a>
+  </div>
     <div id="footer"></div>
   </body>
 </html>
